# learning-rust-and-stuff

./: .env  .gitignore  Cargo.toml  docker-compose.yaml  gitAddCommit.sh  jsconfig.json  package-lock.json  package.json  start.sh  tailwind.config.js  webpack.config.js
mongo-seed/: Dockerfile  initDb.json
postgres-seed/: Cargo.toml  Dockerfile
postgres-seed/src/: main.rs
rust-ssr-app/: Cargo.toml  package-lock.json  package.json  tailwind.config.js  webpack.config.js
rust-ssr-app/src/: config.rs  db.rs  handlers.rs  json_payload.rs  main.rs  renderers.rs  router.rs  state.rs  utils.rs
rust-ssr-app/src/views/: mod.rs  types.rs
rust-ssr-app/templates/: error.html  forms.html  index.css  index.html  macro.html  pageNotFound.html
rust-ssr-app/templates/js/: index.js  utils.js
rust-ssr-app/templates/js/components/: SearchDropDown.js  SettingsDropDown.js
src/: config.rs  db.json  db.rs  handlers.rs  iteniary.json  json_payload.rs  logger.rs  main.rs  renderers.rs  router.rs  state.rs  types.rs  utils.rs
src/handlers/: mod.rs
src/json_payload/: mod.rs
src/renderers/: mod.rs
src/state/: mod.rs
src/todos/: mod.rs
src/views/: mod.rs  types.rs
templates/: addTodo.html  blocks.html  dashBoard.html  error.html  forms.html  index.css  index.html  index.js  index2.html  logIn.html  macro.html  pageNotFound.html  toDoList.html  toDoListItem.html
templates/js/: index.js  utils.js
templates/js/components/: AddItinearyModal.js  SettingsDropDown.js
