[package]
name = "todo-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.194"
serde_json = "1.0.111"
serde_derive = "1.0.195"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
askama = "0.12.1"
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
tower-http = {version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3.18"
