[package]
name = "postgres-seed"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_derive = "1.0.195"
serde = "1.0.194"
serde_json = "1.0.111"
anyhow = "1.0.81"
tracing = "0.1.40"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing-subscriber = "0.3.18"
