[package]
name = "rust-ssr-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.194"
serde_json = "1.0.111"
serde_derive = "1.0.195"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
askama = "0.12.1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
tower-http = {version = "0.5.2", features = ["cors", "trace", "fs"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
anyhow = "1.0.81"
dotenv = "0.15.0"
once_cell = "1.19.0"
mime_guess = "2.0.4"
tokio-util = "0.7.10"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
axum-macros = "0.4.1"
